[project]
name = "comfyui-loop"
description = "A pair of nodes (Load Image and Save Image) to create a simple loop in your ComfyUI inpainting workflow, without the need of loading your last saved image, and a few others to cut and paste back the cutting into the source."
version = "0.1.5.1"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/Hullabalo/ComfyUI-Loop"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hullabaloo"
DisplayName = "ComfyUI-Loop"
Icon = "https://github.com/Hullabalo/ComfyUI-Loop/raw/main/ComfyUI-Loop.png"
